--- a/.github/workflows/build-rax3000m_256m.yml
+++ b/.github/workflows/build-rax3000m_256m.yml
@@ -92,6 +92,9 @@ jobs:
     - name: Update feeds
       run: cd openwrt && ./scripts/feeds update -a
 
+    - name: Update golang
+      run: cd openwrt && rm -rf feeds/packages/lang/golang && git clone https://github.com/kenzok8/golang feeds/packages/lang/golang
+      
     - name: Install feeds
       run: cd openwrt && ./scripts/feeds install -a
        
