--- a/.github/workflows/build-rax3000m_256m.yml
+++ b/.github/workflows/build-rax3000m_256m.yml
@@ -28,6 +28,7 @@ env:
   CONFIG_FILE: rax3000m_256m_240301.config
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
+  DIY_P3_SH: diy-part3.sh
   TZ: Asia/Shanghai
   DEVICE: rax3000m_256m
   UPLOAD_OUTPUT: true
@@ -106,6 +107,11 @@ jobs:
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P2_SH
         
+    - name: Load openclash configuration
+      run: |
+        chmod +x $DIY_P3_SH
+        cd openwrt
+        $GITHUB_WORKSPACE/$DIY_P3_SH        
 
     - name: SSH connection to Actions
       uses: P3TERX/ssh2actions@v1.0.0
