--- a/.github/workflows/build-rax3000m_256m.yml
+++ b/.github/workflows/build-rax3000m_256m.yml
@@ -132,7 +132,7 @@ jobs:
     - name: 编译固件
       run: |
         cd openwrt
-        make -j$(nproc)
+        make V=s -j1
         echo "FILE_DATE=$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
 
     - name : 上传输出文件
